; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/mc/extr_mc-request.c_media_request_ioctl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/mc/extr_mc-request.c_media_request_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.media_request* }
%struct.media_request = type { i32 }

@ENOIOCTLCMD = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.file*, i32, i64)* @media_request_ioctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @media_request_ioctl(%struct.file* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.file*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca %struct.media_request*, align 8
  store %struct.file* %0, %struct.file** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %9 = load %struct.file*, %struct.file** %5, align 8
  %10 = getelementptr inbounds %struct.file, %struct.file* %9, i32 0, i32 0
  %11 = load %struct.media_request*, %struct.media_request** %10, align 8
  store %struct.media_request* %11, %struct.media_request** %8, align 8
  %12 = load i32, i32* %6, align 4
  switch i32 %12, label %19 [
    i32 129, label %13
    i32 128, label %16
  ]

13:                                               ; preds = %3
  %14 = load %struct.media_request*, %struct.media_request** %8, align 8
  %15 = call i64 @media_request_ioctl_queue(%struct.media_request* %14)
  store i64 %15, i64* %4, align 8
  br label %22

16:                                               ; preds = %3
  %17 = load %struct.media_request*, %struct.media_request** %8, align 8
  %18 = call i64 @media_request_ioctl_reinit(%struct.media_request* %17)
  store i64 %18, i64* %4, align 8
  br label %22

19:                                               ; preds = %3
  %20 = load i64, i64* @ENOIOCTLCMD, align 8
  %21 = sub nsw i64 0, %20
  store i64 %21, i64* %4, align 8
  br label %22

22:                                               ; preds = %19, %16, %13
  %23 = load i64, i64* %4, align 8
  ret i64 %23
}

declare dso_local i64 @media_request_ioctl_queue(%struct.media_request*) #1

declare dso_local i64 @media_request_ioctl_reinit(%struct.media_request*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
